--- a/env.example
+++ b/env.example
@@ -1,3 +1,3 @@
-AUTH_SECRET="PtU+RQrPp5ty3cvXMntBT/ieYQw49mBO68j4/N3vSjs="
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
+AUTH_SECRET=sample-auth-secret
 AUTH_RESEND_KEY=re_sample_key
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
