--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Lint
         run: npm run lint
 
-      - name: Tests
+      - name: Test
         run: npm test
 
       - name: E2E Tests
