Enhance: make PostgreSQL port configurable via POSTGRES_PORT env variable

--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
 AUTH_SECRET=sample-auth-secret
 AUTH_RESEND_KEY=re_sample_key
+POSTGRES_PORT=5432
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
