--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
 AUTH_SECRET=sample-auth-secret
 AUTH_RESEND_KEY=re_sample_key
-POSTGRES_PORT=5432
+EMAIL_FROM=noreply@gumboard.com
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
