--- a/env.example
+++ b/env.example
@@ -2,3 +2,7 @@ AUTH_SECRET=sample-auth-secret
 AUTH_RESEND_KEY=re_sample_key
 EMAIL_FROM=noreply@gumboard.com
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
+
+GOOGLE_CLIENT_ID=your_google-client_id
+GOOGLE_CLIENT_SECRET=your_google-client_secret
+NEXTAUTH_URL=https://gumboard.com/
