--- a/env.example
+++ b/env.example
@@ -5,4 +5,4 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
 
 GOOGLE_CLIENT_ID=your_google-client_id
 GOOGLE_CLIENT_SECRET=your_google-client_secret
-NEXTAUTH_URL=https://gumboard.com/
+AUTH_URL=https://gumboard.com/
