--- a/env.example
+++ b/env.example
@@ -5,4 +5,6 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
 
 GOOGLE_CLIENT_ID=your_google-client_id
 GOOGLE_CLIENT_SECRET=your_google-client_secret
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
 AUTH_URL=https://gumboard.com/
