add mock env to CI (#138)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,12 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_CLIENT_ID: dummy-client-id
+      GITHUB_CLIENT_SECRET: dummy-client-secret
+      AUTH_SECRET: sample-auth-secret
+      AUTH_URL: http://localhost:3000
+
     steps:
       - uses: actions/checkout@v4
 
