Update example env code (#146)

--- a/env.example
+++ b/env.example
@@ -1,10 +1,10 @@
 AUTH_SECRET=sample-auth-secret
 AUTH_RESEND_KEY=re_sample_key
-EMAIL_FROM=noreply@gumboard.com
+EMAIL_FROM=onboarding@resend.dev
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gumboard
 
 GOOGLE_CLIENT_ID=your_google-client_id
 GOOGLE_CLIENT_SECRET=your_google-client_secret
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
-AUTH_URL=https://gumboard.com/
+AUTH_URL=http://localhost:3000
