--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@tanstack/query-sync-storage-persister": "^5.83.1",
+    "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query-devtools": "^5.84.2",
+    "@tanstack/react-query-persist-client": "^5.84.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.7",
@@ -43,6 +47,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "react-virtuoso": "^4.14.0",
     "resend": "^4.6.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
