--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset",
+    "db:seed-large": "node scripts/seed-large.js",
+    "bench:indexes": "node scripts/bench-indexes.js",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down"
   },
@@ -65,5 +67,6 @@
     "ts-jest": "^29.4.0",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
 }
