--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "resend": "^4.6.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
